Fix default bot-comment-api-base

--- a/.github/workflows/ros1.yaml
+++ b/.github/workflows/ros1.yaml
@@ -17,7 +17,7 @@ on:
       bot-comment-api-base:
         description: "GitHub API base URL to post a bot comment"
         type: string
-        default: false
+        default: ""
       enable-codecov:
         description: "Upload coverage report to Codecov"
         type: boolean
