--- a/.github/workflows/alpine-ros1-release.yaml
+++ b/.github/workflows/alpine-ros1-release.yaml
@@ -50,7 +50,7 @@ on:
         required: true
 
 jobs:
-  test:
+  alpine-ros1-release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
