--- a/.github/workflows/ros1-release-candidate.yaml
+++ b/.github/workflows/ros1-release-candidate.yaml
@@ -53,7 +53,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.token }}
           BRANCH: ${{ inputs.branch }}
-          PR_BODY: ${{ inputs.body }}
+          PR_BODY: ${{ inputs.pr-body }}
           PR_ASSIGNEE: ${{ inputs.pr-assignee }}
         run: |
           gh pr create \
