alpine-ros1-release: fix checkout options

--- a/.github/workflows/alpine-ros1-release.yaml
+++ b/.github/workflows/alpine-ros1-release.yaml
@@ -57,6 +57,8 @@ jobs:
         with:
           repository: ${{ inputs.source-repo-slug }}
           ref: ${{ inputs.release-ref }}
+          persist-credentials: false
+          fetch-depth: 0
       - name: Setup gitconfig
         id: gitconfig
         env:
