alpine-ros1-release: fix self test on main

--- a/.github/workflows/alpine-ros1-release.yaml
+++ b/.github/workflows/alpine-ros1-release.yaml
@@ -89,7 +89,7 @@ jobs:
         run: |
           action_dir=$(mktemp -d)
           git clone --depth=1 \
-            -b ${ACTION_REF} \
+            -b ${ACTION_REF:-main} \
             https://github.com/alpine-ros/alpine-ros-ci-workflows.git ${action_dir}
 
           key=
