alpine-ros1-release: validate empty token

--- a/.github/workflows/alpine-ros1-release.yaml
+++ b/.github/workflows/alpine-ros1-release.yaml
@@ -70,6 +70,10 @@ jobs:
         env:
           TOKEN: ${{ inputs.token }}
         run: |
+          if [ -z "${TOKEN}" ]; then
+            echo "token is empty" >&2
+            exit 1
+          fi
           cat <<EOS >${HOME}/.netrc
           machine github.com
           login git
