alpine-ros1-release: fix loading token (#14)

--- a/.github/workflows/alpine-ros1-release.yaml
+++ b/.github/workflows/alpine-ros1-release.yaml
@@ -68,8 +68,12 @@ jobs:
           git config --global user.email "${GIT_EMAIL}"
       - name: Setup netrc
         env:
-          TOKEN: ${{ inputs.token }}
+          TOKEN: ${{ secrets.token }}
         run: |
+          if [ -z "${TOKEN}" ]; then
+            echo "token is empty" >&2
+            exit 1
+          fi
           cat <<EOS >${HOME}/.netrc
           machine github.com
           login git
