--- a/.github/workflows/ros1-release-candidate.yaml
+++ b/.github/workflows/ros1-release-candidate.yaml
@@ -46,8 +46,8 @@ jobs:
         uses: at-wat/catkin-release-action@v1
         with:
           issue_title: ${{ inputs.release-title }}
-          git_user: alpine-ros-bot
-          git_email: 214657941+alpine-ros-bot@users.noreply.github.com
+          git_user: ${{ inputs.git-user }}
+          git_email: ${{ inputs.git-email }}
           github_token: ${{ secrets.token }}
       - name: open pull-request
         env:
