--- a/.github/workflows/ros1-release-candidate.yaml
+++ b/.github/workflows/ros1-release-candidate.yaml
@@ -32,10 +32,16 @@ on:
       token:
         description: "GitHub token to open release candidate PR"
         required: true
+    outputs:
+      pr-branch:
+        description: "Created release candidate PR branch"
+        value: ${{ jobs.release-candidate.outputs.pr-branch }}
 
 jobs:
   release-candidate:
     runs-on: ubuntu-latest
+    outputs:
+      pr-branch: ${{ steps.create-release.outputs.created_branch }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
