Process coverage report on self test

--- a/.github/workflows/internal.test-ros1.yaml
+++ b/.github/workflows/internal.test-ros1.yaml
@@ -17,5 +17,7 @@ jobs:
     with:
       enable-bot-comment: true
       repository: alpine-ros/sample-ros-pkg
+      enable-codecov: true
+      internal-dryrun-codecov: true
     secrets:
       bot-comment-token: ${{ secrets.GITHUB_TOKEN }}
