--- a/.github/workflows/ros1.yaml
+++ b/.github/workflows/ros1.yaml
@@ -35,7 +35,7 @@ on:
         type: string
         default: ""
       internal-dryrun-codecov:
-        description: "[internal] Process coverage report but do not upload"
+        description: "[internal] Process coverage report but do not upload. For internal testing"
         type: boolean
         default: false
     secrets:
@@ -243,7 +243,7 @@ jobs:
             ghcr.io/alpine-ros/ros-abuild:${ALPINE_VERSION}-${ROS_DISTRO}
 
       - uses: codecov/codecov-action@v5
-        if: inputs.enable-codecov && inputs.internal-dryrun-codecov != 'true'
+        if: inputs.enable-codecov && inputs.internal-dryrun-codecov != true
         with:
           token: ${{ secrets.codecov-upload-token }}
 
